[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "GraduationOutcomes"
authors = [
    {name = "Qing Dou", email = "qdou@mail.yu.edu"},
    {name = "Ziqi", email = "zikih25@gmail.com"}
]
maintainers = [
    {name = "Qing Dou", email = "qdou@mail.yu.edu"},
    {name = "Ziqi", email = "zikih25@gmail.com"}
]

description = "A Python package for analyze GraduationOutcomes in NYC "
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.3", 
    "numpy>=1.20", 
    "pandas>=1.4", 
    "beautifulsoup4>=4.10.0", 
    "seaborn>=0.11.0", 
    "requests>=2.27.1", 
    "scikit-learn>=0.24.0", 
    "scipy>=1.6.0"  
]

version="2.0"

[project.urls]
Repository = "https://github.com/qdou14/GraduationOutcomes.git"

[tool.setuptools.packages.find]
where = ["src"]